# factorial-algorithms-and-probability

./: README.md  basic_code.py  pyproject.toml
.github/workflows/: python-tests.yml
benchmarks/: benchmark_factorial.py
initial code/: initial_code2
src/: factorial.py
src/factorial_toolkit/: cli.py
tests/: test_factorial.py
