[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factorial-toolkit"
version = "0.1.0"
description = "Factorial algorithms with tests and multiple implementations"
authors = [{ name="Beatriz" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
factorial = "factorial_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
